[package]
name = "silver-chainsaw"
version = "0.1.0"
authors = ["Frederik Braun <fbraun@mozilla.com>"]
edition = "2018"

[dependencies]
getopts = "0.2.21"
regex = "1.4.5"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
strum = "0.20.0"
strum_macros = "0.20.1"
url = "2.2.1"
